syntax = "proto3";

import "google/protobuf/timestamp.proto";

package user;

option go_package = "../internal/pb";

message RegisterRequest {
    string email = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
    google.protobuf.Timestamp date_of_birth = 5;
}